--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,12 +19,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+  flutter_cupertino_localizations: ^1.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
   http: 0.12.0
+  datetime_picker_formfield: ^0.4.3
+  intl: ^0.15.8
 
 dev_dependencies:
   flutter_test:
